# Large-Pixel

./: .gitignore  CMakeLists.txt  ConstNum.h  Main.cpp  README.md  Screen.cpp  Screen.h
